cleaned code: fixed spacing

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,41 +1,41 @@
 section.new-tweet {
-    background-color: #eeeeee;
-    border: solid 1px #a7a7a7;
-    border-radius: 5px;
-    margin: 0em 2em;
-    padding:  0.5em;
+	background-color: #eeeeee;
+	border: solid 1px #a7a7a7;
+	border-radius: 5px;
+	margin: 0em 2em;
+	padding:  0.5em;
 }
 
 section.new-tweet h2 {
-    margin-top: 2px;
-    border-bottom: 1px solid #a7a7a7;
+	margin-top: 2px;
+	border-bottom: 1px solid #a7a7a7;
 }
 
 section.new-tweet textarea {
-    width: 100%;
-    padding: 5px;
-    border: 1px solid #a7a7a7;
+	width: 100%;
+	padding: 5px;
+	border: 1px solid #a7a7a7;
 }
 
 section.new-tweet input {
-    border: 1px solid #a7a7a7;
-    background: linear-gradient(180deg, rgba(216,214,217,1) 0%, rgba(240,239,237,1) 100%);
+	border: 1px solid #a7a7a7;
+	background: linear-gradient(180deg, rgba(216,214,217,1) 0%, rgba(240,239,237,1) 100%);
 }
 
 section.new-tweet .counter {
-    float: right;
-    margin: 3px 7px;
+  float: right;
+  margin: 3px 7px;
 }
 
 section.new-tweet .counter.red{
-    color: red;
+  color: red;
 }
 
 section.new-tweet .isa_error{
-    margin: 10px 0px;
-    padding:12px;
-    color: #D8000C;
-    background-color: #FFD2D2;
-    display: none;
-    border-radius: 5px;
+  margin: 10px 0px 0px 0px;
+  padding:12px;
+  color: #D8000C;
+  background-color: #FFD2D2;
+  display: none;
+  border-radius: 5px;
 }
